added Label class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="row">
-            <canvas id="canvas" width="620" height="480"></canvas>
+            <canvas id="canvas" width="320" height="320"></canvas>
 
         </div>
     </div>
@@ -32,6 +32,7 @@
     <script src="Scripts/lib/PreloadJS/lib/preloadjs-0.6.2.min.js"></script>
 
     <!--Site Scripts-->
+    <script src="Scripts/objects/label.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
 
